<?xml version="1.0"?>
<package format="3">
  <name>gazebo_continuous_track_ros2_ignition</name>
  <version>0.1.0</version>
  <description>Ignition Gazebo / Gazebo Sim System plugins for continuous crawler tracks.</description>
  <maintainer email="okada@rm.is.tohoku.ac.jp">Yoshito Okada</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ignition-cmake2</buildtool_depend>

  <depend>ignition-gazebo6</depend>
  <depend>ignition-math6</depend>
  <depend>ignition-plugin1</depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
